# data-connect

./: .env.example  .gitignore  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  README.md  active.md  components.json  eslint.config.js  index.html  npm-run-dev-logs.txt  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.auth.config.ts  vite.config.ts
.claude/: settings.local.json
connectors/: .gitignore  index.ts  registry.json
docs/: 260121-data-portability-protocol-spec.md  260130-react-audit-storage-and-vercel-review-feedback.md  260130-react-audit-storage-and-vercel-review.md  260130-react-refactor-plan.md  260130-react-refresh-constant-exports.md  260202-agents-md-best-practices.md  260202-connection-flow-ui-plan.md  260202-reference-0xsero-x-post.md  260202-ui-implementation-typography.md  260203-grant-connect-flow-plan.md  260203-grant-connect-flow.md  260203-page-structure-refactor.md  260205-app-id-design.md  260205-connect-flow-mock.md  260206-UI-TODOs.md  260206-grant-step3-plan.md  260209-desktop-app-connect-flow-changes.md  260210-compound-engineering.md  260211-e2e-test-logs.md  260212-demo-app-chatgpt-endpoint-instructions.md  260212-github-release-process.md  260214-passport-auth-conversion-plan.md  260216-deep-link-contract-code-source-of-truth.md  260217-connect-already-connected-test-followup.md  260217-planning-better-next-time.md  260219-figma-macos-icon-setup.md  260219-grant-retryable-errors-plan.md  260219-planning-better.md  260220-auth-precondition-investigation.md  260220-connector-auth-ux-follow-up-notes-and-todos.md  architecture.md  (+7 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/auth-page/: index.html
src-tauri/capabilities/: default.json  default.test.ts
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: auth.rs  auth_proxy.rs  connector.rs  download.rs  file_ops.rs  mod.rs  server.rs  updates.rs
src-tauri/src/processors/: chatgpt.rs  mod.rs  zip.rs
(+533 files in other folders)
