[package]
name = "databridge"
version = "0.1.0"
description = "DataBridge - Export your data from various platforms"
authors = ["DataBridge Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "databridge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10", features = [] }
tauri-plugin-log = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-deep-link = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream", "blocking"] }
zip = "0.6"
walkdir = "2"
futures-util = "0.3"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
semver = "1.0"
dirs = "5.0"
mime_guess = "2.0.5"
tauri-plugin-mcp-bridge = "0.8.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
